--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,6 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/test/unit/coverage/
-/test/e2e/reports/
 selenium-debug.log
 
 # Editor directories and files
@@ -24,3 +22,4 @@ test/
 MINE.md
 UUU/
 zip/
+coverage/
